all templates first build

--- a/template.html
+++ b/template.html
@@ -19,7 +19,9 @@
                     {navigation.current} of {navigation.total}
                 </div>
 
-                <h1>{project.name}</h1>
+                <div id="h1_wrapper">
+                    <h1>{project.name}</h1>
+                </div>
 
         </div>
 
@@ -29,8 +31,7 @@
                     {navigation.html}
                 </ul>
             </div>
-        </div>
-                
+        </div>  
 
         <div id="page_wrapper">
 
