--- a/template.html
+++ b/template.html
@@ -8,11 +8,11 @@
                 </div>
 
                 <div class="travel {previous.disabled}" data-role="pager-previous">
-                    <a href="{previous.url}"><i class="icon-chevron-left icon-white"></i></a>
+                    <a href="{previous.url}" title="Back to the previous page"><i class="icon-chevron-left icon-white"></i></a>
                 </div>
 
                 <div class="travel right {next.disabled}" data-role="pager-next">
-                    <a href="{next.url}"><i class="icon-chevron-right icon-white"></i></a>
+                    <a href="{next.url}" title="Progress to the next page"><i class="icon-chevron-right icon-white"></i></a>
                 </div>
 
                 <div data-role="pager-status" class="page-count">
