--- a/parts/navigation_item.html
+++ b/parts/navigation_item.html
@@ -1,4 +1,4 @@
-				<li class="{page.is_section} {page.active}">
-                    <i class="icon-ok icon-white"></i> <a href="{page.url}" title="{page.name}">{page.name}</a>
-                    {page.sub_pages}
+				<li class="{{page.is_section}} {{page.active}}">
+                    <i class="icon-ok icon-white"></i> <a href="{{page.url}}" title="{{page.name}}">{{page.name}}</a>
+                    {{page.sub_pages}}
                 </li>
