--- a/template.html
+++ b/template.html
@@ -7,20 +7,20 @@
                     <a id="menu_toggle" href="#project_navigation" data-toggle="dropdown" data-target="#project_navigation"><i class="icon-list icon-white"></i></a>
                 </div>
 
-                <div class="travel {previous.disabled}" data-role="pager-previous">
-                    <a href="{previous.url}" title="Back to the previous page"><i class="icon-chevron-left icon-white"></i></a>
+                <div class="travel {{previous.disabled}}" data-role="pager-previous">
+                    <a href="{{previous.url}}" title="Back to the previous page"><i class="icon-chevron-left icon-white"></i></a>
                 </div>
 
-                <div class="travel right {next.disabled}" data-role="pager-next">
-                    <a href="{next.url}" title="Progress to the next page"><i class="icon-chevron-right icon-white"></i></a>
+                <div class="travel right {{next.disabled}}" data-role="pager-next">
+                    <a href="{{next.url}}" title="Progress to the next page"><i class="icon-chevron-right icon-white"></i></a>
                 </div>
 
                 <div data-role="pager-status" class="page-count">
-                    {navigation.current} of {navigation.total}
+                    {{navigation.current}} of {{navigation.total}}
                 </div>
 
                 <div id="h1_wrapper">
-                    <h1>{project.name}</h1>
+                    <h1>{{project.name}}</h1>
                 </div>
 
         </div>
@@ -28,7 +28,7 @@
         <div id="project_navigation">
             <div class="scroller">
                 <ul data-role="navigation">
-                    {navigation.html}
+                    {{navigation.html}}
                 </ul>
             </div>
         </div>  
@@ -36,10 +36,10 @@
         <div id="page_wrapper">
 
             <div id="page_title">
-                <h2 data-role="page.name">{page.name}</h2>
+                <h2 data-role="page.name">{{page.name}}</h2>
             </div>
             <div id="page_wrapper_inner">
-                {page.html}
+                {{page.html}}
             </div>
         </div> 
     </div> 
